fixing BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ html {
 }
 
 body {
+  display: table-row;
+  width: 100%;
   height: 120%;
   background-color: rgb(240,240,240);
   font-family: "Slabo 27px", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
